--- a/Mitosearch/package.json
+++ b/Mitosearch/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "bignumber.js": "^9.1.2",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
