--- a/Mitosearch/.gitignore
+++ b/Mitosearch/.gitignore
@@ -1,7 +1,11 @@
 public/layered_data/*
 node_modules
 update_scripts/singularity_image
-db_fish_en
-db_fish_ja
-db_fish_zh
+update_scripts/blastresult
+update_scripts/fastq
+update_scripts/download
+update_scripts/qsublog
+db_fish_en/*
+db_fish_ja/*
+db_fish_zh/*
 data/fish
